--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>carregando...</title>
+<title>Luan Lima</title>
 </head>
 <body>
 <p>twitter: @iluanlima</p>
