--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Luan Lima</title>
+<title>Luan L.</title>
 </head>
 <body>
-<p>twitter: @iluanlima</p>
+<p>Contato: iLuanLima@hotmail.com </p>
 </body>
 </html>
