--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slava Ukraini</title>
     <style>
+        body {
+            /* Fundo com as cores da Ucrânia: metade azul e metade amarela */
+            background: linear-gradient(to bottom, #0057B7 50%, #FFD700 50%);
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
         table {
             width: 100%;
             border-collapse: collapse;
+            background-color: white; /* Para destacar a tabela no fundo colorido */
         }
         th, td {
             border: 1px solid #ddd;
