--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
     <title>Slava Ukraini</title>
     <style>
         body {
-            /* Fundo com as cores da Ucrânia: metade azul e metade amarela */
-            background: linear-gradient(to bottom, #0057B7 50%, #FFD700 50%);
+            /* Fundo em azul claro e amarelo suave */
+            background: linear-gradient(to bottom, #87CEEB 50%, #FAFAD2 50%);
             margin: 0;
             font-family: Arial, sans-serif;
         }
         table {
-            width: 100%;
+            width: 90%;
+            margin: 20px auto; /* Centralizando a tabela */
             border-collapse: collapse;
-            background-color: white; /* Para destacar a tabela no fundo colorido */
+            background-color: white; /* Fundo neutro para a tabela */
         }
         th, td {
             border: 1px solid #ddd;
             padding: 8px;
+            text-align: left;
         }
         th {
             background-color: #f2f2f2;
+            color: #333;
         }
         .usd {
             color: green;
