--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <title>Slava Ukraini</title>
     <style>
         body {
-            /* Fundo em azul claro e amarelo suave */
-            background: linear-gradient(to bottom, #87CEEB 50%, #FAFAD2 50%);
             margin: 0;
             font-family: Arial, sans-serif;
         }
         table {
             width: 90%;
-            margin: 20px auto; /* Centralizando a tabela */
+            margin: 20px auto;
             border-collapse: collapse;
-            background-color: white; /* Fundo neutro para a tabela */
+            background-color: white;
         }
         th, td {
             border: 1px solid #ddd;
@@ -38,9 +36,19 @@
         .xmr {
             color: red;
         }
+        .flag {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 50px; /* Largura da bandeira */
+            height: 30px; /* Altura da bandeira */
+            background: linear-gradient(to bottom, #0057B7 50%, #FFD700 50%);
+            border: 1px solid #000; /* Contorno preto para destacar */
+        }
     </style>
 </head>
 <body>
+    <div class="flag"></div> <!-- Bandeira da Ucrânia -->
     <table id="cotacoes">
         <thead>
             <tr>
