--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         }
         th {
             background-color: #f2f2f2;
-            color: #333;
+        }
+        th:first-child {
+            color: #0057B7; /* Azul (cor da bandeira da Ucrânia) */
+        }
+        th:last-child {
+            color: #FFD700; /* Amarelo (cor da bandeira da Ucrânia) */
         }
         .usd {
             color: green;
@@ -40,10 +45,10 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            width: 50px; /* Largura da bandeira */
-            height: 30px; /* Altura da bandeira */
+            width: 50px;
+            height: 30px;
             background: linear-gradient(to bottom, #0057B7 50%, #FFD700 50%);
-            border: 1px solid #000; /* Contorno preto para destacar */
+            border: 1px solid #000;
         }
     </style>
 </head>
