--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
             padding: 8px;
             text-align: left;
         }
-        th {
-            background-color: #f2f2f2;
-        }
         th:first-child {
-            color: #0057B7; /* Azul (cor da bandeira da Ucrânia) */
+            background-color: #0057B7; /* Azul (cor da bandeira da Ucrânia) */
+            color: white; /* Texto branco para contraste */
         }
         th:last-child {
-            color: #FFD700; /* Amarelo (cor da bandeira da Ucrânia) */
+            background-color: #FFD700; /* Amarelo (cor da bandeira da Ucrânia) */
+            color: black; /* Texto preto para contraste */
         }
         .usd {
             color: green;
@@ -44,16 +43,22 @@
         .flag {
             position: absolute;
             top: 10px;
-            right: 10px;
             width: 50px;
             height: 30px;
             background: linear-gradient(to bottom, #0057B7 50%, #FFD700 50%);
             border: 1px solid #000;
         }
+        .flag-left {
+            left: 10px; /* Bandeira no canto superior esquerdo */
+        }
+        .flag-right {
+            right: 10px; /* Bandeira no canto superior direito */
+        }
     </style>
 </head>
 <body>
-    <div class="flag"></div> <!-- Bandeira da Ucrânia -->
+    <div class="flag flag-left"></div> <!-- Bandeira da Ucrânia no canto superior esquerdo -->
+    <div class="flag flag-right"></div> <!-- Bandeira da Ucrânia no canto superior direito -->
     <table id="cotacoes">
         <thead>
             <tr>
