--- a/index.html
+++ b/index.html
@@ -20,25 +20,21 @@
             padding: 8px;
             text-align: left;
         }
-        th:first-child {
-            background-color: #0057B7; /* Azul (cor da bandeira da Ucrânia) */
-            color: white; /* Texto branco para contraste */
+        th:first-child, .moeda {
+            background-color: #0057B7; /* Azul */
+            color: white; /* Texto branco */
         }
-        th:last-child {
-            background-color: #FFD700; /* Amarelo (cor da bandeira da Ucrânia) */
-            color: black; /* Texto preto para contraste */
+        th:last-child, .valor {
+            background-color: #FFD700; /* Amarelo */
+            color: black; /* Texto preto */
         }
-        .usd {
-            color: green;
+        .usd, .btc, .ltc, .xmr {
+            background-color: #0057B7; /* Azul para os nomes das moedas */
+            color: white; /* Texto branco */
         }
-        .btc {
-            color: orange;
-        }
-        .ltc {
-            color: silver;
-        }
-        .xmr {
-            color: red;
+        .valor-usd, .valor-btc, .valor-ltc, .valor-xmr {
+            background-color: #FFD700; /* Amarelo para os valores */
+            color: black; /* Texto preto */
         }
         .flag {
             position: absolute;
@@ -62,26 +58,26 @@
     <table id="cotacoes">
         <thead>
             <tr>
-                <th>Moeda</th>
-                <th>Valor (BRL)</th>
+                <th class="moeda">Moeda</th>
+                <th class="valor">Valor (BRL)</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td class="usd">Dólar (USD)</td>
-                <td id="usd">Carregando...</td>
+                <td class="valor-usd" id="usd">Carregando...</td>
             </tr>
             <tr>
                 <td class="btc">Bitcoin (BTC)</td>
-                <td id="btc">Carregando...</td>
+                <td class="valor-btc" id="btc">Carregando...</td>
             </tr>
             <tr>
                 <td class="ltc">Litecoin (LTC)</td>
-                <td id="ltc">Carregando...</td>
+                <td class="valor-ltc" id="ltc">Carregando...</td>
             </tr>
             <tr>
                 <td class="xmr">Monero (XMR)</td>
-                <td id="xmr">Carregando...</td>
+                <td class="valor-xmr" id="xmr">Carregando...</td>
             </tr>
         </tbody>
     </table>
