--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             background-color: #FFD700; /* Amarelo */
             color: black; /* Texto preto */
         }
-        .usd, .eur, .gbp, .btc, .ltc, .xmr {
+        .usd, .eur, .gbp, .btc, .eth, .ltc, .xmr, .ton {
             background-color: #0057B7; /* Azul para os nomes */
             color: white; /* Texto branco */
         }
-        .valor-usd, .valor-eur, .valor-gbp, .valor-btc, .valor-ltc, .valor-xmr {
+        .valor-usd, .valor-eur, .valor-gbp, .valor-btc, .valor-eth, .valor-ltc, .valor-xmr, .valor-ton {
             background-color: #FFD700; /* Amarelo para os valores */
             color: black; /* Texto preto */
         }
@@ -80,6 +80,10 @@
                 <td class="valor-btc" id="btc">Carregando...</td>
             </tr>
             <tr>
+                <td class="eth">Ethereum (ETH)</td>
+                <td class="valor-eth" id="eth">Carregando...</td>
+            </tr>
+            <tr>
                 <td class="ltc">Litecoin (LTC)</td>
                 <td class="valor-ltc" id="ltc">Carregando...</td>
             </tr>
@@ -87,21 +91,27 @@
                 <td class="xmr">Monero (XMR)</td>
                 <td class="valor-xmr" id="xmr">Carregando...</td>
             </tr>
+            <tr>
+                <td class="ton">Toncoin (TON)</td>
+                <td class="valor-ton" id="ton">Carregando...</td>
+            </tr>
         </tbody>
     </table>
 
     <script>
         async function fetchCotacoes() {
             try {
-                const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=usd,eur,gbp,bitcoin,litecoin,monero&vs_currencies=brl');
+                const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=usd,eur,gbp,bitcoin,ethereum,litecoin,monero,toncoin&vs_currencies=brl');
                 const data = await res.json();
                 
                 document.getElementById('usd').innerText = data.usd.brl.toFixed(2);
                 document.getElementById('eur').innerText = data.eur.brl.toFixed(2);
                 document.getElementById('gbp').innerText = data.gbp.brl.toFixed(2);
                 document.getElementById('btc').innerText = Math.floor(data.bitcoin.brl);
+                document.getElementById('eth').innerText = Math.floor(data.ethereum.brl);
                 document.getElementById('ltc').innerText = data.litecoin.brl.toFixed(2);
                 document.getElementById('xmr').innerText = data.monero.brl.toFixed(2);
+                document.getElementById('ton').innerText = data.toncoin.brl.toFixed(2);
             } catch (error) {
                 console.error('Erro ao buscar cotações:', error);
             }
