--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
         async function fetchCotacoes() {
             try {
                 const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=usd,eur,gbp,bitcoin,ethereum,litecoin,monero,toncoin&vs_currencies=brl');
+                if (!res.ok) {
+                    throw new Error(`Erro ao acessar a API: ${res.status}`);
+                }
+                
                 const data = await res.json();
 
                 document.getElementById('usd').innerText = data.usd?.brl?.toFixed(2) || "N/A";
